--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,18 @@
 /* Global Styles */
+:root {
+  --bg-color: #f1f2f3;
+  --bdr: #ced4da;
+}
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
 * {
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -79,4 +93,10 @@ input[type="text"] {
   box-sizing: border-box;
   width: 100%;
   padding: .5rem;
+}
+
+@media screen and (max-width: 767px) {
+  .container, body{
+    padding: 0;  
+  }
 }
